--- a/style.css
+++ b/style.css
@@ -3,9 +3,13 @@
     padding: 0;
 }
 
+body{
+        font-family: 'Poppins', sans-serif;
+}
+
 .cabecalho {
-    background-color: #c813ff3f;
-    color: white;
+    background-color: #3e0450;
+    color: rgb(255, 255, 255);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -18,6 +22,63 @@
 
 .cabecalho-lista-item{
     display: inline-block;
-    margin: 0 24px;
-    font-size: 16px;
+    margin: 0 16px;
+    font-size: 24px;
+}
+
+.escola-imagem{
+    width: 25%;
+}
+
+.escola{
+    background-image: linear-gradient(#4a065f,#533ec7);
+    color:white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+}
+ 
+.escola-div-conteudo{
+    width: 35%;
+}
+
+.escola-titulo{
+    padding: 24px 0;
+    color: rgb(6, 1, 8);
+}
+
+.estudante-imagem{
+    width: 120px;
+}
+.estudante-icone{
+    width: 24px;
+
+}
+.estudante-div{
+    text-align: center;
+
+}
+
+.estudante-titulo{
+    text-align: center;
+    padding: 50px 0;
+
+}
+
+.estudante-todos{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+}
+
+.rodape{
+    background-color: #4a065f;
+    text-align: center;
+    
+}
+
+.rodape-imagem{
+    height: 60px;
+    padding: 12px 0;
+
 }
